--- a/index.jade
+++ b/index.jade
@@ -19,21 +19,18 @@ body(ng-app="materialApp" layout="column" ng-cloak).image
     <![endif]-->
 
     include index-content
-        | index content
     block content
 
-    <script src="js/main.js"></script>
-
     //- <!-- Angular Material requires Angular.js Libraries -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js")
 
-    //- <!-- Angular Material Library -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+    script(src="js/users/Users.js")
+    script(src="js/users/UsersListController.js")
+    script(src="js/users/UsersDataservice.js")
+    script(src="js/main.js")
+    script(src="js/materialApp.js")
 
-    //- <!-- Your application bootstrap  -->
-    script.
-    //- You must include the dependency on 'ngMaterial'
-        angular.module('materialApp', ['ngMaterial']);
